    File::Constants::TMPFILE option. [Feature #13568]
  * File.stat, File.exist?, and other rb_stat()-using methods release GVL
    [Bug #13941]
  * File.rename releases GVL [Feature #13951]

* Hash

  * Hash#transform_keys  [Feature #13583]
  * Hash#transform_keys!  [Feature #13583]
  * Hash#slice  [Feature #8499]

* IO

  * IO#pread  [Feature #4532]
  * IO#pwrite  [Feature #4532]

* IOError

  * exception message "stream closed" is changed  [Bug #13405]

* Integer

  * Integer.sqrt  [Feature #13219]
  * Integer#step does no longer rescue exceptions when given
    a step value which cannot be compared with #> to 0. [Feature #7688]
  * Integer#{round,floor,ceil,truncate} now always return an Integer.
    [Bug #13420]

* Kernel

  * Kernel#yield_self  [Feature #6721]

* Net::HTTP

  * Net::HTTP.new supports no_proxy parameter [Feature #11195]

* Numeric

  * Numerical comparison operators (<,<=,>=,>) no longer rescue exceptions
    of #coerce. Return nil in #coerce if the coercion is impossible.
    [Feature #7688]

* Process

  * Precision of Process.times is improved if getrusage(2) exists. [Feature #11952]

* Range
  * Range#initialize no longer rescue exceptions when comparing begin and
    end with #<=> and raise a "bad value for range" ArgumentError
    but instead let the exception from the #<=> call go through.
    [Feature #7688]

* Regexp
  * Update to Onigmo 6.1.1.
    * Support absent operator https://github.com/k-takata/Onigmo/issues/82

* String

  * String#-@ deduplicates unfrozen strings.  Already-frozen
    strings remain unchanged for compatibility.  [Feature #13077]
  * -"literal" (String#-@) optimized to return the same object
    (same as "literal".freeze in Ruby 2.1+) [Feature #13295]
  * String#{casecmp,casecmp?} now return nil for non-string arguments
    instead of raising a TypeError. [Bug #13312]
  * String#delete_prefix is added to remove prefix [Feature #12694]